testing rebase me

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/shurley/ansible-operator
+FROM docker.io/shurley/ansible-operator:demo
 
 COPY busybox/ /opt/ansible/roles/busybox/
 COPY playbook.yaml /opt/ansible/roles/busybox/playbook.yaml
