intial working status, updating status does not work.

--- a/example/busybox/tasks/main.yml
+++ b/example/busybox/tasks/main.yml
@@ -6,7 +6,7 @@
       kind: Deployment
       apiVersion: apps/v1
       metadata:
-        name: test
+        name: '{{ meta.name }}-busybox'
         namespace: '{{ meta.namespace }}'
       spec:
         selector:
