--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -14,7 +14,10 @@ spec:
     spec:
       containers:
         - name: ansible-operator
-          image: docker.io/shurley/ansible-operator-test
+          image: docker.io/shurley/ansible-operator-test:latest
+          ports:
+          - containerPort: 60000
+            name: metrics
           command:
           - ansible-operator
           imagePullPolicy: Always
@@ -23,3 +26,5 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: OPERATOR_NAME
+              value: "ansible-operator"
